--- a/operator.html
+++ b/operator.html
@@ -68,7 +68,38 @@
   const operatorName = params.get('name');
 
   if (operatorName) {
-    const lower = operatorName.toLowerCase().replace(/[^a-z0-9]/gi, '');
+<script>
+  const nameOverrides = {
+    'Capitão': 'capitao',
+    'Nøkk': 'nokk',
+    'Sledge': 'sledge' // Included for consistency; this one already matches
+  };
+
+  const params = new URLSearchParams(window.location.search);
+  const operatorName = params.get('name');
+
+  function generateFilename(name) {
+    const normalized = nameOverrides[name] || name.toLowerCase()
+      .normalize('NFD')                // Break accented characters
+      .replace(/[\u0300-\u036f]/g, '') // Remove accents
+      .replace(/\s+/g, '-')            // Spaces to hyphens
+      .replace(/[^a-z0-9-]/g, '');     // Remove special chars
+    return `r6-operators-base-${normalized}-removebg-preview.png`;
+  }
+
+  if (operatorName) {
+    const filename = generateFilename(operatorName);
+    document.getElementById('operatorImage').src = filename;
+    document.getElementById('operatorImage').alt = operatorName;
+    document.getElementById('operatorName').textContent = operatorName;
+  } else {
+    document.getElementById('operatorName').textContent = 'No operator selected';
+  }
+
+  function goBack() {
+    window.location.href = 'index.html';
+  }
+</script>
     const imageName = `r6-operators-base-${lower}-removebg-preview.png`;
 
     document.getElementById('operatorImage').src = imageName;
