--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Siege Operator Combiner</title>
 <style>
+/* Animation keyframes */
+@keyframes slideOutLeft {
+  from { transform: translateX(0); opacity: 1; }
+  to { transform: translateX(-100%); opacity: 0; }
+}
+
+@keyframes slideInRight {
+  from { transform: translateX(100%); opacity: 0; }
+  to { transform: translateX(0); opacity: 1; }
+}
+
+@keyframes slideOutRight {
+  from { transform: translateX(0); opacity: 1; }
+  to { transform: translateX(100%); opacity: 0; }
+}
+
+@keyframes slideInLeft {
+  from { transform: translateX(-100%); opacity: 0; }
+  to { transform: translateX(0); opacity: 1; }
+}
+
+.fade-out-left {
+  animation: slideOutLeft 0.3s forwards;
+}
+
+.fade-out-right {
+  animation: slideOutRight 0.3s forwards;
+}
+
+.fade-in-left {
+  animation: slideInLeft 0.3s forwards;
+}
+
+.fade-in-right {
+  animation: slideInRight 0.3s forwards;
+}
+
   body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -36,6 +73,7 @@
     color: #0078d7;
     box-shadow: 0 0 15px white;
   }
+
   #attackers-list, #defenders-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px,1fr));
@@ -194,18 +232,47 @@
       });
   }
 
-  btnAttackers.addEventListener('click', () => {
+function animateSwitch(toTeam) {
+  const fromList = toTeam === 'attacker' ? defendersList : attackersList;
+  const toList = toTeam === 'attacker' ? attackersList : defendersList;
+
+  // Add animation to hide current list
+  fromList.classList.add(toTeam === 'attacker' ? 'fade-out-right' : 'fade-out-left');
+
+  // When animation ends, swap content and animate new list in
+  fromList.addEventListener('animationend', function handler() {
+    fromList.classList.add('hidden');
+    fromList.classList.remove('fade-out-right', 'fade-out-left');
+    fromList.removeEventListener('animationend', handler);
+
+    renderOperators(toTeam);
+
+    // Add animation to show the new list
+    toList.classList.add(toTeam === 'attacker' ? 'fade-in-left' : 'fade-in-right');
+
+    // Clean up animation class after it's done
+    toList.addEventListener('animationend', function cleanup() {
+      toList.classList.remove('fade-in-left', 'fade-in-right');
+      toList.removeEventListener('animationend', cleanup);
+    });
+  });
+}
+
+btnAttackers.addEventListener('click', () => {
+  if (!btnAttackers.classList.contains('active')) {
     btnAttackers.classList.add('active');
     btnDefenders.classList.remove('active');
-    renderOperators('attacker');
-  });
+    animateSwitch('attacker');
+  }
+});
 
-  btnDefenders.addEventListener('click', () => {
+btnDefenders.addEventListener('click', () => {
+  if (!btnDefenders.classList.contains('active')) {
     btnDefenders.classList.add('active');
     btnAttackers.classList.remove('active');
-    renderOperators('defender');
-  });
-
+    animateSwitch('defender');
+  }
+});
   // Initial render: Attackers visible by default
   renderOperators('attacker');
 </script>
