--- a/grids.html
+++ b/grids.html
@@ -113,7 +113,80 @@
   const operators = [
     // Your full operators array (as you posted)
     { name: "Striker", team: "attacker", image: "r6-operators-list-striker.webp" },
-    // ... rest omitted here for brevity, keep your full list as is ...
+    { name: "Sledge", team: "attacker", image: "r6-operators-list-sledge.webp" },
+    { name: "Thatcher", team: "attacker", image: "r6-operators-list-thatcher.webp" },
+    { name: "Ash", team: "attacker", image: "r6-operators-list-ash.webp" },
+    { name: "Thermite", team: "attacker", image: "r6-operators-list-thermite.webp" },
+    { name: "Twitch", team: "attacker", image: "r6-operators-list-twitch.webp" },
+    { name: "Montagne", team: "attacker", image: "r6-operators-list-montagne.webp" },
+    { name: "Glaz", team: "attacker", image: "r6-operators-list-glaz.webp" },
+    { name: "Fuze", team: "attacker", image: "r6-operators-list-fuze.webp" },
+    { name: "Blitz", team: "attacker", image: "r6-operators-list-blitz.webp" },
+    { name: "IQ", team: "attacker", image: "r6-operators-list-iq.webp" },
+    { name: "Buck", team: "attacker", image: "r6-operators-list-buck.webp" },
+    { name: "Blackbeard", team: "attacker", image: "r6-operators-list-blackbeard.webp" },
+    { name: "Capitão", team: "attacker", image: "r6-operators-list-capitao.webp" },
+    { name: "Hibana", team: "attacker", image: "r6-operators-list-hibana.webp" },
+    { name: "Jackal", team: "attacker", image: "r6-operators-list-jackal.webp" },
+    { name: "Ying", team: "attacker", image: "r6-operators-list-ying.webp" },
+    { name: "Zofia", team: "attacker", image: "r6-operators-list-zofia.webp" },
+    { name: "Dokkaebi", team: "attacker", image: "r6-operators-list-dokkaebi.webp" },
+    { name: "Lion", team: "attacker", image: "r6-operators-list-lion.webp" },
+    { name: "Finka", team: "attacker", image: "r6-operators-list-finka.webp" },
+    { name: "Maverick", team: "attacker", image: "r6-operators-list-maverick.webp" },
+    { name: "Nomad", team: "attacker", image: "r6-operators-list-nomad.webp" },
+    { name: "Gridlock", team: "attacker", image: "r6-operators-list-gridlock.webp" },
+    { name: "Nøkk", team: "attacker", image: "r6-operators-list-nokk.webp" },
+    { name: "Amaru", team: "attacker", image: "r6-operators-list-amaru.webp" },
+    { name: "Kali", team: "attacker", image: "r6-operators-list-kali.webp" },
+    { name: "Iana", team: "attacker", image: "r6-operators-list-iana.webp" },
+    { name: "Ace", team: "attacker", image: "r6-operators-list-ace.webp" },
+    { name: "Zero", team: "attacker", image: "r6-operators-list-zero.webp" },
+    { name: "Flores", team: "attacker", image: "r6-operators-list-flores.webp" },
+    { name: "Osa", team: "attacker", image: "r6-operators-list-osa.webp" },
+    { name: "Sens", team: "attacker", image: "r6-operators-list-sens.webp" },
+    { name: "Grim", team: "attacker", image: "r6-operators-list-grim.webp" },
+    { name: "Brava", team: "attacker", image: "r6-operators-list-brava.webp" },
+    { name: "Ram", team: "attacker", image: "r6-operators-list-ram.webp" },
+    { name: "Deimos", team: "attacker", image: "r6-operators-list-deimos.webp" },
+    { name: "Rauora", team: "attacker", image: "r6-operators-list-rauora.webp" },
+    
+    { name: "Sentry", team: "defender", image: "r6-operators-list-sentry.webp" },
+    { name: "Smoke", team: "defender", image: "r6-operators-list-smoke.webp" },
+    { name: "Mute", team: "defender", image: "r6-operators-list-mute.webp" },
+    { name: "Castle", team: "defender", image: "r6-operators-list-castle.webp" },
+    { name: "Pulse", team: "defender", image: "r6-operators-list-pulse.webp" },
+    { name: "Doc", team: "defender", image: "r6-operators-list-doc.webp" },
+    { name: "Rook", team: "defender", image: "r6-operators-list-rook.webp" },
+    { name: "Kapkan", team: "defender", image: "r6-operators-list-kapkan.webp" },
+    { name: "Tachanka", team: "defender", image: "r6-operators-list-tachanka.webp" },
+    { name: "Jäger", team: "defender", image: "r6-operators-list-jager.webp" },
+    { name: "Bandit", team: "defender", image: "r6-operators-list-bandit.webp" },
+    { name: "Frost", team: "defender", image: "r6-operators-list-frost.webp" },
+    { name: "Valkyrie", team: "defender", image: "r6-operators-list-valkyrie.webp" },
+    { name: "Caveira", team: "defender", image: "r6-operators-list-caveira.webp" },
+    { name: "Echo", team: "defender", image: "r6-operators-list-echo.webp" },
+    { name: "Mira", team: "defender", image: "r6-operators-list-mira.webp" },
+    { name: "Lesion", team: "defender", image: "r6-operators-list-lesion.webp" },
+    { name: "Ela", team: "defender", image: "r6-operators-list-ela.webp" },
+    { name: "Vigil", team: "defender", image: "r6-operators-list-vigil.webp" },
+    { name: "Maestro", team: "defender", image: "r6-operators-list-maestro.webp" },
+    { name: "Alibi", team: "defender", image: "r6-operators-list-alibi.webp" },
+    { name: "Clash", team: "defender", image: "r6-operators-list-clash.webp" },
+    { name: "Kaid", team: "defender", image: "r6-operators-list-kaid.webp" },
+    { name: "Mozzie", team: "defender", image: "r6-operators-list-mozzie.webp" },
+    { name: "Warden", team: "defender", image: "r6-operators-list-warden.webp" },
+    { name: "Goyo", team: "defender", image: "r6-operators-list-goyo.webp" },
+    { name: "Wamai", team: "defender", image: "r6-operators-list-wamai.webp" },
+    { name: "Oryx", team: "defender", image: "r6-operators-list-oryx.webp" },
+    { name: "Melusi", team: "defender", image: "r6-operators-list-melusi.webp" },
+    { name: "Aruni", team: "defender", image: "r6-operators-list-aruni.webp" },
+    { name: "Thunderbird", team: "defender", image: "r6-operators-list-thunderbird.webp" },
+    { name: "Thorn", team: "defender", image: "r6-operators-list-thorn.webp" },
+    { name: "Azami", team: "defender", image: "r6-operators-list-azami.webp" },
+    { name: "Solis", team: "defender", image: "r6-operators-list-solis.webp" },
+    { name: "Fenrir", team: "defender", image: "r6-operators-list-fenrir.webp" },
+    { name: "Tubarão", team: "defender", image: "r6-operators-list-tubarao.webp" },
     { name: "Skopos", team: "defender", image: "r6-operators-list-skopos.webp" },
   ];
 
