--- a/operator.html
+++ b/operator.html
@@ -91,7 +91,8 @@
   }
 
   function goBack() {
-    window.location.href = 'index.html';
+    const hash = window.location.hash || '#attackers'; // default to attackers
+    window.location.href = `grids.html${hash}`;
   }
 </script>
 
