--- a/grids.html
+++ b/grids.html
@@ -103,8 +103,14 @@
 
 <div class="buttons">
   <button id="btn-attackers" class="active">Attackers</button>
+  
+  <a href="index.html" class="home-button" title="Home">
+    <img src="r6-logo.png" alt="Home" />
+  </a>
+  
   <button id="btn-defenders">Defenders</button>
 </div>
+
 
 <div id="attackers-list"></div>
 <div id="defenders-list" class="hidden"></div>
