--- a/grids.html
+++ b/grids.html
@@ -68,6 +68,30 @@
     box-shadow: 0 0 15px white;
   }
 
+.home-button {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: middle;
+  height: 48px;
+  width: 48px;
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+  box-shadow: 0 0 8px white;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+.home-button img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  filter: drop-shadow(0 0 5px white);
+}
+.home-button:hover {
+  transform: scale(1.1);
+}
+  
   #attackers-list, #defenders-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px,1fr));
