--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
       height: 100vh;
     }
 
-    .half {
-      flex: 1;
-      overflow: hidden;
-      position: relative;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
+.half {
+  flex: 1;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 0 8px white; /* subtle glow */
+  border-radius: 8px;
+}
 
-    .half:hover {
-      transform: scale(1.03);
-      z-index: 1;
-    }
+.half:hover {
+  transform: scale(1.03);
+  z-index: 1;
+  box-shadow: 0 0 20px 4px white; /* stronger glow on hover */
+}
 
     .half img {
       width: 100%;
@@ -41,21 +44,23 @@
       display: block;
     }
 
-    .overlay {
-      position: absolute;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0, 0, 0, 0.6);
-      padding: 15px 30px;
-      border: 2px solid white;
-      border-radius: 10px;
-      color: white;
-      font-size: 1.5rem;
-      font-weight: bold;
-      text-align: center;
-      pointer-events: none;
-    }
+.overlay {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(0, 0, 0, 0.7); /* slightly darker for contrast */
+  padding: 15px 30px;
+  border: 2px solid white;
+  border-radius: 10px;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  pointer-events: none;
+  text-shadow: 0 0 5px black;
+}
+
 
     a {
       text-decoration: none;
