--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rainbow Six Siege Operator Selector</title>
   <style>
-    body {
-      margin: 0;
-      background: black;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
+body {
+  margin: 0;
+  background: black;
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-transform: uppercase; /* <-- Added here */
+}
     .split-container {
       display: flex;
       width: 100%;
