--- a/grids.html
+++ b/grids.html
@@ -36,13 +36,14 @@
     animation: slideInRight 0.3s forwards;
   }
 
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: url('R6BlueBackground.jpg') no-repeat center center fixed;
-    background-size: cover;
-    color: white;
-  }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: url('R6BlueBackground.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: white;
+  text-transform: uppercase; /* Added */
+}
   .buttons {
     text-align: center;
     margin: 20px 0;
