--- a/operator.html
+++ b/operator.html
@@ -17,27 +17,29 @@
       justify-content: center;
       height: 100vh;
       text-align: center;
+      text-transform: uppercase;
     }
-
     .operator-container {
       background-color: rgba(0, 0, 0, 0.6);
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 0 15px white;
+      max-width: 320px;
+      width: 100%;
     }
-
     .operator-image {
       max-width: 300px;
       width: 100%;
       border-radius: 10px;
+      box-shadow: 0 0 12px #0078d7;
+      margin-bottom: 20px;
     }
-
     h1 {
-      margin: 20px 0 10px;
+      margin: 0 0 20px;
+      font-size: 2rem;
+      letter-spacing: 2px;
     }
-
     .back-button {
-      margin-top: 20px;
       background: transparent;
       border: 2px solid white;
       color: white;
@@ -47,54 +49,60 @@
       cursor: pointer;
       box-shadow: 0 0 10px white;
       transition: background-color 0.3s;
+      text-transform: uppercase;
     }
-
     .back-button:hover {
-      background-color: rgba(255,255,255,0.2);
+      background-color: rgba(255, 255, 255, 0.2);
     }
   </style>
 </head>
 <body>
 
-<div class="operator-container">
-  <img id="operatorImage" class="operator-image" src="" alt="Operator" />
-  <h1 id="operatorName">Operator</h1>
-  <button class="back-button" onclick="goBack()">← Back</button>
-</div>
+  <div class="operator-container">
+    <img id="operatorImage" class="operator-image" src="" alt="Operator" />
+    <h1 id="operatorName">Operator</h1>
+    <button class="back-button" onclick="goBack()">← Back</button>
+  </div>
 
-<script>
-  const nameOverrides = {
-    'Capitão': 'capitao',
-    'Nøkk': 'nokk',
-    'Sledge': 'sledge'
-  };
+  <script>
+    // Map special operator names to file-friendly lowercase keys
+    const nameOverrides = {
+      'Capitão': 'capitao',
+      'Nøkk': 'nokk',
+      'Jäger': 'jager',
+      'Thorn': 'thorn',
+      'Tubarão': 'tubarao',
+      // Add any others as needed here
+    };
 
-  const params = new URLSearchParams(window.location.search);
-  const operatorName = params.get('name');
+    // Get operator name from URL param
+    const params = new URLSearchParams(window.location.search);
+    const operatorName = params.get('name');
 
-  function generateFilename(name) {
-    const normalized = nameOverrides[name] || name.toLowerCase()
-      .normalize('NFD')
-      .replace(/[\u0300-\u036f]/g, '') // Strip accents
-      .replace(/\s+/g, '-')            // Replace spaces with hyphens
-      .replace(/[^a-z0-9-]/g, '');     // Remove special characters
-    return `r6-operators-base-${normalized}-removebg-preview.png`;
-  }
+    function generateFilename(name) {
+      if (!name) return '';
+      const normalized = nameOverrides[name] || name.toLowerCase()
+        .normalize('NFD')             // Normalize unicode characters
+        .replace(/[\u0300-\u036f]/g, '') // Remove accents
+        .replace(/\s+/g, '-')        // Replace spaces with dashes
+        .replace(/[^a-z0-9-]/g, ''); // Remove invalid chars
+      return `r6-operators-base-${normalized}-removebg-preview.png`;
+    }
 
-  if (operatorName) {
-    const filename = generateFilename(operatorName);
-    document.getElementById('operatorImage').src = filename;
-    document.getElementById('operatorImage').alt = operatorName;
-    document.getElementById('operatorName').textContent = operatorName;
-  } else {
-    document.getElementById('operatorName').textContent = 'No operator selected';
-  }
+    if (operatorName) {
+      const filename = generateFilename(operatorName);
+      const imgEl = document.getElementById('operatorImage');
+      imgEl.src = filename;
+      imgEl.alt = operatorName;
+      document.getElementById('operatorName').textContent = operatorName;
+    } else {
+      document.getElementById('operatorName').textContent = 'No operator selected';
+      document.getElementById('operatorImage').style.display = 'none';
+    }
 
-  function goBack() {
-    const hash = window.location.hash || '#attackers'; // default to attackers
-    window.location.href = `grids.html${hash}`;
-  }
-</script>
-
+    function goBack() {
+      window.location.href = 'index.html';
+    }
+  </script>
 </body>
 </html>
