--- a/grids.html
+++ b/grids.html
@@ -48,17 +48,19 @@ body {
     text-align: center;
     margin: 20px 0;
   }
-  button {
-    background: transparent;
-    border: 2px solid white;
-    color: white;
-    font-size: 1.1rem;
-    padding: 10px 20px;
-    margin: 0 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 0 0 8px white;
-    transition: background-color 0.3s, color 0.3s;
+button {
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+  font-size: 1.1rem;
+  padding: 10px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 0 8px white;
+  transition: background-color 0.3s, color 0.3s;
+  text-transform: uppercase;  /* ADD THIS LINE */
+}
   }
   button:hover {
     background-color: rgba(255,255,255,0.2);
