--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rainbow Six Siege Operator Selector</title>
   <style>
-body {
-  margin: 0;
-  background: black;
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  text-transform: uppercase; /* <-- Added here */
+button {
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+  font-size: 1.1rem;
+  padding: 10px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 0 8px white;
+  transition: background-color 0.3s, color 0.3s;
+
+  /* Add these two lines: */
+  font-family: 'Russo One', Arial, sans-serif;
+  text-transform: uppercase;
 }
     .split-container {
       display: flex;
