--- a/operator.html
+++ b/operator.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Operator View</title>
+  <!-- Add Russo One font -->
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Russo One', Arial, sans-serif;
       background: url('R6BlueBackground.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
@@ -38,6 +40,7 @@
       margin: 0 0 20px;
       font-size: 2rem;
       letter-spacing: 2px;
+      font-family: 'Russo One', Arial, sans-serif;
     }
     .back-button {
       background: transparent;
@@ -50,6 +53,7 @@
       box-shadow: 0 0 10px white;
       transition: background-color 0.3s;
       text-transform: uppercase;
+      font-family: 'Russo One', Arial, sans-serif;
     }
     .back-button:hover {
       background-color: rgba(255, 255, 255, 0.2);
