--- a/operator.html
+++ b/operator.html
@@ -187,15 +187,22 @@
       document.getElementById('operatorImage').style.display = 'none';
     }
 
-    function goBack() {
-      const team = operatorsTeams[operatorName];
-      if (team === 'attacker') {
-        window.location.href = 'grids.html#attackers';
-      } else if (team === 'defender') {
-        window.location.href = 'grids.html#defenders';
-      } else {
-        window.location.href = 'index.html';
-      }
+function goBack() {
+  // Convert operator name to correct casing for lookup
+  const name = Object.keys(operatorsTeams).find(
+    key => key.toUpperCase() === operatorName.toUpperCase()
+  );
+
+  const team = operatorsTeams[name];
+
+  if (team === 'attacker') {
+    window.location.href = 'grids.html#attackers';
+  } else if (team === 'defender') {
+    window.location.href = 'grids.html#defenders';
+  } else {
+    window.location.href = 'index.html';
+  }
+}
     }
   </script>
 </body>
