--- a/operator.html
+++ b/operator.html
@@ -187,16 +187,21 @@
       document.getElementById('operatorImage').style.display = 'none';
     }
 
-    function goBack() {
-      const team = operatorsTeams[operatorName];
-      if (team === 'attacker') {
-        window.location.href = 'grids.html#attackers';
-      } else if (team === 'defender') {
-        window.location.href = 'grids.html#defenders';
-      } else {
-        window.location.href = 'index.html';
-      }
-    }
+function goBack() {
+  const normalizedName = Object.keys(operatorsTeams).find(
+    key => key.toUpperCase() === operatorName.toUpperCase()
+  );
+
+  const team = operatorsTeams[normalizedName];
+
+  if (team === 'attacker') {
+    window.location.href = 'grids.html#attackers';
+  } else if (team === 'defender') {
+    window.location.href = 'grids.html#defenders';
+  } else {
+    window.location.href = 'index.html';
+  }
+}
   </script>
 </body>
 </html>
