--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ button {
   bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.7); /* slightly darker for contrast */
+  background: rgba(0, 0, 0, 0.6);
   padding: 15px 30px;
   border: 2px solid white;
   border-radius: 10px;
@@ -64,6 +64,9 @@ button {
   font-weight: bold;
   text-align: center;
   pointer-events: none;
+  text-transform: uppercase;
+  font-family: 'Russo One', Arial, sans-serif;
+}
   text-shadow: 0 0 5px black;
 }
 
