--- a/grids.html
+++ b/grids.html
@@ -90,26 +90,18 @@
   padding: 8px;
   box-shadow: 0 0 10px white;
   display: inline-block;
-  height: 170px; /* Slightly taller for consistent height */
 }
-
 .operator-card img {
   width: 100px;
-  height: 120px; /* Reduce image height slightly to make space */
+  height: 133px;
   object-fit: cover;
   border-radius: 5px;
   margin-bottom: 5px;
 }
-
 .operator-name {
   font-weight: bold;
-  font-size: 0.85rem;
-  word-wrap: break-word;
-  white-space: normal;
-  line-height: 1.1;
-  padding: 0 4px;
+  font-size: 0.95rem;
 }
-
     .buttons {
   display: flex;
   justify-content: center;
