--- a/grids.html
+++ b/grids.html
@@ -260,10 +260,35 @@
         });
     }
 
-    function animateSwitch(toTeam) {
-      const fromTeam = toTeam === 'attacker' ? 'defender' : 'attacker';
-      const fromList = fromTeam === 'attacker' ? attackersList : defendersList;
-      const toList = toTeam === 'attacker' ? attackersList : defendersList;
+function animateSwitch(toTeam) {
+  const fromTeam = toTeam === 'attacker' ? 'defender' : 'attacker';
+  const fromList = fromTeam === 'attacker' ? attackersList : defendersList;
+  const toList = toTeam === 'attacker' ? attackersList : defendersList;
+
+  // Animate out the current list
+  fromList.classList.add(toTeam === 'attacker' ? 'fade-out-right' : 'fade-out-left');
+
+  // When animation ends on the fromList...
+  fromList.addEventListener('animationend', function handleFadeOut() {
+    fromList.classList.add('hidden');
+    fromList.classList.remove('fade-out-left', 'fade-out-right');
+    fromList.removeEventListener('animationend', handleFadeOut);
+
+    // Now render the new list
+    renderOperators(toTeam);
+
+    // Show the new list and animate it in
+    toList.classList.remove('hidden');
+    toList.classList.add(toTeam === 'attacker' ? 'fade-in-left' : 'fade-in-right');
+
+    // Clean up the animation class after it finishes
+    toList.addEventListener('animationend', function handleFadeIn() {
+      toList.classList.remove('fade-in-left', 'fade-in-right');
+      toList.removeEventListener('animationend', handleFadeIn);
+    });
+  });
+}
+
 
       renderOperators(toTeam);
 
