--- a/grids.html
+++ b/grids.html
@@ -89,10 +89,18 @@
   background: rgba(0,0,0,0.5);
   border-radius: 8px;
   text-align: center;
+  color: white;
+  text-decoration: none;
   padding: 8px;
   box-shadow: 0 0 10px white;
   display: inline-block;
 }
+    .operator-card:visited {
+      color: white;
+    }
+    .operator-card:hover {
+      color: white:
+    }
 
 .operator-card img {
   width: 100%;
